QPainter: Skip drawing text if target rect is invalid

If drawText() is passed an empty/invalid target rectangle, we would
still go though the motions of laying out and painting the
text. Output would normally be empty, as expected, since the clipping
would take of it. But for paint devices with limited clipping support,
like QSvgGenerator in 1.2 Tiny mode, the text would wrongly show up.

Add a shortcut to skip painting text in this case.

Fixes: QTBUG-127114
Change-Id: Ia7de3e7d2493218fc2a0f6cb0e815285ddceeb1d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit c7df8dda8b60b4e4e7b1859f462d65cef5d8c85b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>